--- a/src/components/VCMarkedIt/layout.less
+++ b/src/components/VCMarkedIt/layout.less
@@ -264,7 +264,9 @@
     border-radius: 3px;
     box-shadow: inset 0 -1px 0 #c6cbd1;
   }
-
+  pre[class^=language-]:before {
+    text-transform: uppercase;
+  }
   pre[class~=language-js]:before {
     content: "js"
   }
