--- a/src/components/VCMarkedIt/layout.less
+++ b/src/components/VCMarkedIt/layout.less
@@ -55,7 +55,7 @@
     font-size: 14px;
   }
 
-  hr {
+  & > hr {
     margin: 20px 0;
     border: none;
     border-bottom: 1px solid var(--gray90);
