添加图标功能

--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -1302,3 +1302,16 @@
   content: "\e88e";
 }
 
+.vc-icon-loading1,
+.vc-icon-loading {
+  animation: rotating 2s linear infinite;
+}
+
+@keyframes rotating {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
