--- a/packages/components/message/message.less
+++ b/packages/components/message/message.less
@@ -1,8 +1,21 @@
-.vc-message-inner {
+.vc-message-box {
   position: fixed;
-  top: 20px;
+  top: 0px;
   left: 50%;
-  z-index: 1000;
+  z-index: 2000;
+}
+
+.vc-message {
+  box-sizing: border-box;
+  overflow: hidden;
+  text-align: center;
+  transform: translateX(-50%);
+  transition: height .4s;
+  pointer-events: none;
+}
+.vc-message-inner {
+  display: inline-block;
+  margin: 5px;
   padding: 5px 10px;
   font-size: 14px;
   color: #333;
@@ -10,8 +23,7 @@
   backdrop-filter: saturate(180%) blur(20px);
   background-color: rgba(255,255,255,0.72);
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, .3);
-  transform: translateX(-50%);
-  transition: opacity 0.3s, transform .4s, top 0.4s;
+  transition: opacity .3s, transform .4s;
 
   i {
     display: inline-block;
@@ -37,10 +49,22 @@
   p {
     display: inline-block;
   }
+
+  .vc-icon-close {
+    margin: 0 -5px 0 0;
+    color: #666;
+    pointer-events: all;
+    transition: color .3s;
+    cursor: pointer;
+
+    &:hover {
+      color: #333;
+    }
+  }
 }
 
 .vc-message-fade-enter-from,
 .vc-message-fade-leave-to {
   opacity: 0;
-  transform: translate(-50%, -100%);
+  transform: translate(0%, -100%);
 }
