--- a/packages/components/message/message.less
+++ b/packages/components/message/message.less
@@ -14,9 +14,10 @@
   pointer-events: none;
 }
 .vc-message-inner {
-  display: inline-block;
+  display: inline-flex;
   margin: 5px;
   padding: 5px 10px;
+  align-items: baseline;
   font-size: 14px;
   color: #333;
   border-radius: 3px;
@@ -26,7 +27,6 @@
   transition: opacity .3s, transform .4s;
 
   i {
-    display: inline-block;
     margin-right: 5px;
 
     &.info {
@@ -48,7 +48,7 @@
 
   div,
   p {
-    display: inline-block;
+    text-align: left;
   }
 
   .vc-icon-close {
