--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,3 +1,4 @@
 @import './components/button/button.less';
 @import './components/icon/icon.less';
 @import './components/message/message.less';
+@import './components/notification/notification.less';
