--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -18,6 +18,178 @@
 	-moz-osx-font-smoothing: grayscale
 }
 
+.vc-icon-bell:before {
+  content: "\e63f";
+}
+
+.vc-icon-message-solid:before {
+  content: "\e64f";
+}
+
+.vc-icon-star-on:before {
+  content: "\e64b";
+}
+
+.vc-icon-star-off:before {
+  content: "\e64c";
+}
+
+.vc-icon-sort-down:before {
+  content: "\e644";
+}
+
+.vc-icon-sort-up:before {
+  content: "\e648";
+}
+
+.vc-icon-sort:before {
+  content: "\e64a";
+}
+
+.vc-icon-no-smoking:before {
+  content: "\e63c";
+}
+
+.vc-icon-smoking:before {
+  content: "\e640";
+}
+
+.vc-icon-success1:before {
+  content: "\e639";
+}
+
+.vc-icon-error:before {
+  content: "\e63a";
+}
+
+.vc-icon-delete:before {
+  content: "\e636";
+}
+
+.vc-icon-delete-solid:before {
+  content: "\e637";
+}
+
+.vc-icon-circle-check:before {
+  content: "\e630";
+}
+
+.vc-icon-check:before {
+  content: "\e631";
+}
+
+.vc-icon-close1:before {
+  content: "\e632";
+}
+
+.vc-icon-circle-close:before {
+  content: "\e633";
+}
+
+.vc-icon-zoom-out:before {
+  content: "\e62e";
+}
+
+.vc-icon-zoom-in:before {
+  content: "\e62f";
+}
+
+.vc-icon-view:before {
+  content: "\e62c";
+}
+
+.vc-icon-not-view:before {
+  content: "\e62d";
+}
+
+.vc-icon-d-caret:before {
+  content: "\e62b";
+}
+
+.vc-icon-move:before {
+  content: "\e62a";
+}
+
+.vc-icon-caret-top:before {
+  content: "\e626";
+}
+
+.vc-icon-caret-left:before {
+  content: "\e627";
+}
+
+.vc-icon-caret-right:before {
+  content: "\e628";
+}
+
+.vc-icon-caret-bottom:before {
+  content: "\e629";
+}
+
+.vc-icon-bottom-left:before {
+  content: "\e622";
+}
+
+.vc-icon-top-right:before {
+  content: "\e623";
+}
+
+.vc-icon-top-left:before {
+  content: "\e624";
+}
+
+.vc-icon-bottom-right:before {
+  content: "\e625";
+}
+
+.vc-icon-top:before {
+  content: "\e61f";
+}
+
+.vc-icon-right:before {
+  content: "\e620";
+}
+
+.vc-icon-bottom:before {
+  content: "\e621";
+}
+
+.vc-icon-back1:before {
+  content: "\e61e";
+}
+
+.vc-icon-arrow-left:before {
+  content: "\e61a";
+}
+
+.vc-icon-arrow-right1:before {
+  content: "\e61b";
+}
+
+.vc-icon-arrow-up1:before {
+  content: "\e61c";
+}
+
+.vc-icon-arrow-down:before {
+  content: "\e61d";
+}
+
+.vc-icon-d-arrow-left:before {
+  content: "\e618";
+}
+
+.vc-icon-d-arrow-right:before {
+  content: "\e619";
+}
+
+.vc-icon-warning:before {
+  content: "\e616";
+}
+
+.vc-icon-warning-outline:before {
+  content: "\e617";
+}
+
 .vc-icon-polyline:before {
   content: "\e615";
 }
@@ -78,16 +250,8 @@
   content: "\e709";
 }
 
-.vc-icon-right:before {
-  content: "\e70a";
-}
-
 .vc-icon-video-pause:before {
   content: "\e70b";
-}
-
-.vc-icon-star-off:before {
-  content: "\e70c";
 }
 
 .vc-icon-trophy:before {
@@ -102,16 +266,8 @@
   content: "\e70f";
 }
 
-.vc-icon-warning-outline:before {
-  content: "\e710";
-}
-
 .vc-icon-wind-power:before {
   content: "\e711";
-}
-
-.vc-icon-view:before {
-  content: "\e712";
 }
 
 .vc-icon-watermelon:before {
@@ -126,16 +282,8 @@
   content: "\e715";
 }
 
-.vc-icon-zoom-in:before {
-  content: "\e716";
-}
-
 .vc-icon-water-cup:before {
   content: "\e717";
-}
-
-.vc-icon-warning:before {
-  content: "\e718";
 }
 
 .vc-icon-watch-:before {
@@ -148,10 +296,6 @@
 
 .vc-icon-plus:before {
   content: "\e71b";
-}
-
-.vc-icon-zoom-out:before {
-  content: "\e71c";
 }
 
 .vc-icon-place:before {
@@ -202,10 +346,6 @@
   content: "\e728";
 }
 
-.vc-icon-smoking:before {
-  content: "\e729";
-}
-
 .vc-icon-shopping-cart-full:before {
   content: "\e72a";
 }
@@ -216,10 +356,6 @@
 
 .vc-icon-s-promotion:before {
   content: "\e72c";
-}
-
-.vc-icon-sort-down:before {
-  content: "\e72d";
 }
 
 .vc-icon-s-release:before {
@@ -274,10 +410,6 @@
   content: "\e73a";
 }
 
-.vc-icon-top-left:before {
-  content: "\e73b";
-}
-
 .vc-icon-switch-button:before {
   content: "\e73c";
 }
@@ -298,10 +430,6 @@
   content: "\e73e";
 }
 
-.vc-icon-arrow-left:before {
-  content: "\e637";
-}
-
 .vc-icon-table-lamp:before {
   content: "\e73f";
 }
@@ -314,32 +442,12 @@
   content: "\e740";
 }
 
-.vc-icon-arrow-right1:before {
-  content: "\e639";
-}
-
-.vc-icon-top-right:before {
-  content: "\e741";
-}
-
-.vc-icon-arrow-up1:before {
-  content: "\e63a";
-}
-
 .vc-icon-trophy-:before {
   content: "\e742";
 }
 
 .vc-icon-alarm-clock:before {
   content: "\e63b";
-}
-
-.vc-icon-top:before {
-  content: "\e754";
-}
-
-.vc-icon-arrow-down:before {
-  content: "\e63c";
 }
 
 .vc-icon-turn-off:before {
@@ -362,16 +470,8 @@
   content: "\e75d";
 }
 
-.vc-icon-bell:before {
-  content: "\e63f";
-}
-
 .vc-icon-postcard:before {
   content: "\e75e";
-}
-
-.vc-icon-bottom-right:before {
-  content: "\e640";
 }
 
 .vc-icon-umbrella:before {
@@ -402,10 +502,6 @@
   content: "\e766";
 }
 
-.vc-icon-bottom-left:before {
-  content: "\e644";
-}
-
 .vc-icon-price-tag:before {
   content: "\e768";
 }
@@ -426,10 +522,6 @@
   content: "\e76a";
 }
 
-.vc-icon-caret-left:before {
-  content: "\e648";
-}
-
 .vc-icon-sunny:before {
   content: "\e76b";
 }
@@ -442,24 +534,8 @@
   content: "\e76c";
 }
 
-.vc-icon-caret-right:before {
-  content: "\e64a";
-}
-
 .vc-icon-reading:before {
   content: "\e76d";
-}
-
-.vc-icon-caret-top:before {
-  content: "\e64b";
-}
-
-.vc-icon-rank:before {
-  content: "\e76e";
-}
-
-.vc-icon-caret-bottom:before {
-  content: "\e64c";
 }
 
 .vc-icon-question:before {
@@ -474,10 +550,6 @@
   content: "\e64e";
 }
 
-.vc-icon-bottom:before {
-  content: "\e64f";
-}
-
 .vc-icon-c-scale-to-original:before {
   content: "\e650";
 }
@@ -488,10 +560,6 @@
 
 .vc-icon-chat-dot-round:before {
   content: "\e652";
-}
-
-.vc-icon-check:before {
-  content: "\e653";
 }
 
 .vc-icon-chat-line-square:before {
@@ -514,14 +582,6 @@
   content: "\e658";
 }
 
-.vc-icon-circle-check:before {
-  content: "\e659";
-}
-
-.vc-icon-circle-close:before {
-  content: "\e65a";
-}
-
 .vc-icon-chicken:before {
   content: "\e65b";
 }
@@ -536,10 +596,6 @@
 
 .vc-icon-close-notification:before {
   content: "\e65e";
-}
-
-.vc-icon-close1:before {
-  content: "\e65f";
 }
 
 .vc-icon-cloudy-and-sunny:before {
@@ -590,14 +646,6 @@
   content: "\e66b";
 }
 
-.vc-icon-d-caret:before {
-  content: "\e66c";
-}
-
-.vc-icon-d-arrow-right:before {
-  content: "\e66d";
-}
-
 .vc-icon-data-board:before {
   content: "\e66e";
 }
@@ -608,14 +656,6 @@
 
 .vc-icon-data-line:before {
   content: "\e670";
-}
-
-.vc-icon-d-arrow-left:before {
-  content: "\e671";
-}
-
-.vc-icon-delete-solid:before {
-  content: "\e672";
 }
 
 .vc-icon-delete-location:before {
@@ -636,10 +676,6 @@
 
 .vc-icon-dish:before {
   content: "\e677";
-}
-
-.vc-icon-delete:before {
-  content: "\e678";
 }
 
 .vc-icon-document-copy:before {
@@ -700,10 +736,6 @@
 
 .vc-icon-film:before {
   content: "\e687";
-}
-
-.vc-icon-error:before {
-  content: "\e688";
 }
 
 .vc-icon-eleme:before {
@@ -878,7 +910,7 @@
   content: "\e6b3";
 }
 
-.vc-icon-loading1:before {
+.vc-icon-loading:before {
   content: "\e6b4";
 }
 
@@ -904,10 +936,6 @@
 
 .vc-icon-map-location:before {
   content: "\e6ba";
-}
-
-.vc-icon-message-solid:before {
-  content: "\e6bb";
 }
 
 .vc-icon-mic:before {
@@ -940,10 +968,6 @@
 
 .vc-icon-more:before {
   content: "\e6c3";
-}
-
-.vc-icon-no-smoking:before {
-  content: "\e6c4";
 }
 
 .vc-icon-more-outline:before {
@@ -1122,22 +1146,6 @@
   content: "\e6f1";
 }
 
-.vc-icon-sort-up:before {
-  content: "\e6f5";
-}
-
-.vc-icon-star-on:before {
-  content: "\e6f6";
-}
-
-.vc-icon-success:before {
-  content: "\e6f7";
-}
-
-.vc-icon-sort:before {
-  content: "\e6f8";
-}
-
 .vc-icon-takeaway-box:before {
   content: "\e6fa";
 }
@@ -1148,10 +1156,6 @@
 
 .vc-icon-save:before {
   content: "\e88f";
-}
-
-.vc-icon-back:before {
-  content: "\e614";
 }
 
 .vc-icon-all:before {
@@ -1174,32 +1178,8 @@
   content: "\e6f9";
 }
 
-.vc-icon-Notvisible:before {
-  content: "\e6fe";
-}
-
-.vc-icon-rising:before {
-  content: "\e703";
-}
-
-.vc-icon-arrow-right:before {
-  content: "\e743";
-}
-
-.vc-icon-arrow-lift:before {
-  content: "\e744";
-}
-
-.vc-icon-arrow-up:before {
-  content: "\e745";
-}
-
 .vc-icon-attachent:before {
   content: "\e746";
-}
-
-.vc-icon-browse:before {
-  content: "\e747";
 }
 
 .vc-icon-assessed-badge:before {
@@ -1214,14 +1194,6 @@
   content: "\e74a";
 }
 
-.vc-icon-close:before {
-  content: "\e74b";
-}
-
-.vc-icon-code1:before {
-  content: "\e74c";
-}
-
 .vc-icon-conditions:before {
   content: "\e74d";
 }
@@ -1230,79 +1202,30 @@
   content: "\e74e";
 }
 
-.vc-icon-copy1:before {
-  content: "\e74f";
-}
-
-.vc-icon-double-arro-right:before {
-  content: "\e750";
-}
-
-.vc-icon-double-arrow-left:before {
-  content: "\e751";
-}
-
-.vc-icon-falling:before {
-  content: "\e752";
-}
-
 .vc-icon-history:before {
   content: "\e753";
-}
-
-.vc-icon-leftarrow:before {
-  content: "\e755";
-}
-
-.vc-icon-loading:before {
-  content: "\e756";
 }
 
 .vc-icon-manage-order:before {
   content: "\e759";
 }
 
-.vc-icon-move:before {
-  content: "\e75a";
-}
-
 .vc-icon-password:before {
   content: "\e75b";
-}
-
-.vc-icon-Notvisible1:before {
-  content: "\e75c";
 }
 
 .vc-icon-return:before {
   content: "\e75f";
 }
 
-.vc-icon-rising1:before {
-  content: "\e761";
-}
-
-.vc-icon-Rightarrow:before {
-  content: "\e762";
-}
-
 .vc-icon-suggest:before {
   content: "\e767";
-}
-
-.vc-icon-exchangerate:before {
-  content: "\e772";
-}
-
-.vc-icon-back2:before {
-  content: "\e635";
 }
 
 .vc-icon-rectangle:before {
   content: "\e88e";
 }
 
-.vc-icon-loading1,
 .vc-icon-loading {
   animation: rotating 2s linear infinite;
 }
