文档细节优化

--- a/example/src/components/VCMarkedIt/layout.less
+++ b/example/src/components/VCMarkedIt/layout.less
@@ -195,6 +195,10 @@
       line-height: 1.6;
       list-style: disc;
     }
+
+    p {
+      color: var(--gray40);
+    }
   }
 
   .vbook-warning-box {
