调整样式位置

--- a/packages/layout.less
+++ b/packages/layout.less
@@ -2,3 +2,5 @@
 @import './components/icon/icon.less';
 @import './components/message/message.less';
 @import './components/notification/notification.less';
+@import './components/formItem/formItem.less';
+@import './components/formItem/label.less';
