--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -18,6 +18,10 @@
 	-moz-osx-font-smoothing: grayscale
 }
 
+.vc-icon-close-notification:before {
+  content: "\e653";
+}
+
 .vc-icon-bell:before {
   content: "\e63f";
 }
@@ -78,7 +82,7 @@
   content: "\e631";
 }
 
-.vc-icon-close1:before {
+.vc-icon-close:before {
   content: "\e632";
 }
 
@@ -592,10 +596,6 @@
 
 .vc-icon-circle-plus:before {
   content: "\e65d";
-}
-
-.vc-icon-close-notification:before {
-  content: "\e65e";
 }
 
 .vc-icon-cloudy-and-sunny:before {
