--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -58,7 +58,7 @@
   content: "\e640";
 }
 
-.vc-icon-success1:before {
+.vc-icon-success:before {
   content: "\e639";
 }
 
@@ -158,7 +158,7 @@
   content: "\e621";
 }
 
-.vc-icon-back1:before {
+.vc-icon-left:before {
   content: "\e61e";
 }
 
@@ -166,11 +166,11 @@
   content: "\e61a";
 }
 
-.vc-icon-arrow-right1:before {
+.vc-icon-arrow-right:before {
   content: "\e61b";
 }
 
-.vc-icon-arrow-up1:before {
+.vc-icon-arrow-up:before {
   content: "\e61c";
 }
 
@@ -198,7 +198,7 @@
   content: "\e615";
 }
 
-.vc-icon-line1:before {
+.vc-icon-line:before {
   content: "\e613";
 }
 
@@ -974,10 +974,6 @@
   content: "\e6c5";
 }
 
-.vc-icon-notebook-:before {
-  content: "\e6c6";
-}
-
 .vc-icon-s-home:before {
   content: "\e6c7";
 }
@@ -990,7 +986,7 @@
   content: "\e6c9";
 }
 
-.vc-icon-notebook-1:before {
+.vc-icon-notebook:before {
   content: "\e6ca";
 }
 
