--- a/packages/components/formItem/label.less
+++ b/packages/components/formItem/label.less
@@ -1,5 +1,6 @@
 .vc-form-item__label {
   color: #666;
+  padding-right: 5px;
 
   .is-required &:not(.is-no-asterisk):before {
     content: '*';
@@ -15,7 +16,7 @@
     }
   }
 
-  label {
-    padding-right: 5px;
+  &-suffix {
+    padding: 0 2px;
   }
 }
