--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,4 +1,4 @@
-/* 以下代码自动生成于 Sat Jul 11 2020 23:03:21 GMT+0800 (中国标准时间) */
+/* 以下代码自动生成于 Mon Jul 13 2020 14:26:04 GMT+0800 (中国标准时间) */
 
 @import './components/button/button.less';
 @import './components/formItem/formItem.less';
@@ -6,3 +6,4 @@
 @import './components/icon/icon.less';
 @import './components/message/message.less';
 @import './components/notification/notification.less';
+@import './components/select/select.less';
