添加下拉箭头动画

--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -29,6 +29,11 @@
       top: 50%;
       color: #666;
       transform: translateY(-50%);
+      transition: transform .3s;
+
+      .is-open & {
+        transform: translateY(-50%) rotateZ(-180deg);
+      }
     }
   }
 }
