优化展开显示效果

--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -45,14 +45,15 @@
     padding: 0 1em;
     line-height: 2.8em;
     color: #666;
-    transition: color .3s;
+    transition: color .3s, font-weight .3s;
 
-    &:hover {
+    &.hover {
       background-color: #f5f7fa;
     }
 
     &.selected {
       color: #09f;
+      font-weight: bold;
     }
   }
 }
