优化选中效果

--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -21,6 +21,10 @@
       &:hover {
         border-color: #aaa;
       }
+
+      .is-open & {
+        border-color: #09f;
+      }
     }
 
     i {
