--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -10,6 +10,7 @@
       display: inline-block;
       padding: 5px 2em 5px 10px;
       width: 100%;
+      color: #666;
       background-color: #fff;
       background-image: none;
       border-radius: 3px;
