--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -1,4 +1,5 @@
 .vc-select {
+  position: relative;
   display: inline-block;
   width: 200px;
 
@@ -10,6 +11,7 @@
       display: inline-block;
       padding: 5px 2em 5px 10px;
       width: 100%;
+      height: 100%;
       color: #666;
       background-color: #fff;
       background-image: none;
