--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -62,6 +62,11 @@
       color: #09f;
       font-weight: bold;
     }
+
+    &[disabled] {
+      color: #aaa;
+      cursor: not-allowed;
+    }
   }
 }
 
