--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -49,7 +49,9 @@
   padding: 3px 0;
 
   li {
+    display: flex;
     padding: 0 1em;
+    align-items: center;
     line-height: 2.8em;
     color: #666;
     transition: color .3s, font-weight .3s;
@@ -66,6 +68,13 @@
     &[disabled] {
       color: #aaa;
       cursor: not-allowed;
+    }
+
+    label {
+      flex: 1;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
   }
 }
