--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -28,6 +28,10 @@
       .is-open & {
         border-color: #09f;
       }
+
+      .is-disabled & {
+        background-color: #f5f7fa;
+      }
     }
 
     i {
