--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -65,39 +65,44 @@
       }
     }
   }
+
+  &-group {
+    &__label {
+      padding: 5px 5px;
+      font-size: 12px;
+      color: #aaa;
+      // background-color: #f5f5f5;
+    }
+  }
 }
 
-.vc-option {
-  padding: 3px 0;
+.vc-select-option  {
+  display: flex;
+  padding: 0 1em;
+  align-items: center;
+  line-height: 2.8em;
+  color: #666;
+  transition: color .3s, font-weight .3s;
 
-  li {
-    display: flex;
-    padding: 0 1em;
-    align-items: center;
-    line-height: 2.8em;
-    color: #666;
-    transition: color .3s, font-weight .3s;
+  &.hover {
+    background-color: #f5f7fa;
+  }
 
-    &.hover {
-      background-color: #f5f7fa;
-    }
+  &.selected {
+    color: #09f;
+    font-weight: bold;
+  }
 
-    &.selected {
-      color: #09f;
-      font-weight: bold;
-    }
+  &[disabled] {
+    color: #aaa;
+    cursor: not-allowed;
+  }
 
-    &[disabled] {
-      color: #aaa;
-      cursor: not-allowed;
-    }
-
-    label {
-      flex: 1;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-    }
+  label {
+    flex: 1;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 }
 
