--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -24,6 +24,9 @@
       &:hover {
         border-color: #aaa;
       }
+      &::placeholder {
+        color: #bbb;
+      }
 
       .is-open & {
         border-color: #09f;
@@ -73,6 +76,12 @@
       color: #aaa;
       // background-color: #f5f5f5;
     }
+  }
+
+  &-empty {
+    text-align: center;
+    color: #aaa;
+    line-height: 3em;
   }
 }
 
