--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,5 +1,6 @@
-/* 以下代码自动生成于 Mon Jul 13 2020 14:26:04 GMT+0800 (中国标准时间) */
+/* 以下代码自动生成于 Thu Jul 16 2020 08:59:54 GMT+0800 (中国标准时间) */
 
+@import './styles/var.less';
 @import './components/button/button.less';
 @import './components/formItem/formItem.less';
 @import './components/formItem/label.less';
