--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -12,7 +12,7 @@
       padding: 5px 2em 5px 10px;
       width: 100%;
       height: 100%;
-      color: #666;
+      color: @color-text-regular;
       background-color: #fff;
       background-image: none;
       border-radius: 3px;
@@ -25,7 +25,7 @@
         border-color: #aaa;
       }
       &::placeholder {
-        color: #bbb;
+        color: @color-text-placeholder;
       }
 
       .is-open & {
@@ -41,7 +41,7 @@
       position: absolute;
       right: 6px;
       top: 50%;
-      color: #666;
+      color: @color-text-regular;
       transform: translateY(-50%);
       transition: transform .3s;
 
@@ -90,7 +90,7 @@
   padding: 0 1em;
   align-items: center;
   line-height: 2.8em;
-  color: #666;
+  color: @color-text-regular;
   transition: color .3s, font-weight .3s;
 
   &.hover {
@@ -113,19 +113,4 @@
     white-space: nowrap;
     overflow: hidden;
   }
-}
-
-.vc-zoom-in-top-enter-active,
-.vc-zoom-in-top-leave-active {
-  opacity: 1;
-  transform: scaleY(1);
-  transition: 
-    transform 400ms cubic-bezier(0.23, 1, 0.32, 1), 
-    opacity 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  transform-origin: center top;
-}
-.vc-zoom-in-top-enter-from,
-.vc-zoom-in-top-leave-active {
-  opacity: 0;
-  transform: scaleY(0);
 }
