--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -114,3 +114,95 @@
     overflow: hidden;
   }
 }
+
+.vc-select-tags {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 2em;
+  z-index: 1;
+  padding: 3px 0 0 3px;
+  box-sizing: border-box;
+
+  .vc-tag {
+    display: inline-block;
+    margin: 0 3px 3px 0;
+    padding: 2px 3px;
+    color: #666;
+    border-radius: 2px;
+    border: 1px solid #e9e9eb;
+    background-color: #f4f4f5;
+
+    i {
+      opacity: .5;
+      cursor: pointer;
+      transition: opacity .3s;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    &.more-tag {
+      padding: 2px 10px;
+    }
+  }
+
+  &__filter {
+    margin: 0 0 2px 0;
+    width: 10%;
+    flex-grow: 1;
+    color: #333;
+    border: none;
+    outline: none;
+    background-color: transparent;
+  }
+}
+
+.vc-select__dropdown {
+  width: 200px;
+  z-index: 1000;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+
+  & > ul {
+    max-height: 200px;
+    overflow: auto;
+  }
+
+  #arrow,
+  #arrow::before {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    z-index: -1;
+  }
+  
+  #arrow::before {
+    content: '';
+    transform: rotate(-45deg);
+    background: #fff;
+    border-color: #ddd;
+    border-style: solid;
+  }
+
+  &[data-popper-placement^='top'] > #arrow {
+    bottom: -5px;
+
+    &::before {
+      border-width: 0 0 1px 1px;
+    }
+  }
+
+  &[data-popper-placement^='bottom'] > #arrow {
+    top: -5px;
+
+    &::before {
+      border-width: 1px 1px 0 0;
+    }
+  }
+}
