--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -74,7 +74,6 @@
       padding: 5px 5px;
       font-size: 12px;
       color: #aaa;
-      // background-color: #f5f5f5;
     }
   }
 
@@ -151,13 +150,17 @@
   }
 
   &__filter {
-    margin: 0 0 2px 0;
+    margin: 3px 2px;
     width: 10%;
     flex-grow: 1;
     color: #333;
     border: none;
     outline: none;
     background-color: transparent;
+
+    &::placeholder {
+      color: @color-text-placeholder;
+    }
   }
 }
 
@@ -170,6 +173,7 @@
   box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
 
   & > ul {
+    margin: 3px 0;
     max-height: 200px;
     overflow: auto;
   }
