添加与vcForm组件的联动

--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -41,7 +41,7 @@
       position: absolute;
       right: 6px;
       top: 50%;
-      color: @color-text-regular;
+      color: @color-text-placeholder;
       transform: translateY(-50%);
       transition: transform .3s;
 
