添加远程搜索功能

--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -9,7 +9,7 @@
     input {
       -webkit-appearance: none;
       display: inline-block;
-      padding: 5px 2em 5px 10px;
+      padding: 5px 24px 5px 10px;
       width: 100%;
       height: 100%;
       color: @color-text-regular;
@@ -37,7 +37,8 @@
       }
     }
 
-    i {
+    & > span,
+    & > i {
       position: absolute;
       right: 6px;
       top: 50%;
@@ -160,6 +161,10 @@
 
     &::placeholder {
       color: @color-text-placeholder;
+    }
+
+    .vc-tag + & {
+      margin: 0 0 3px 3px;
     }
   }
 }
