--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -15,12 +15,19 @@
       flex: 1;
       width: 100%;
       padding: 3px;
+      text-align: center;
       box-sizing: border-box;
       border: 1px solid #ddd;
+      outline: none;
+      transition: border-color 400ms;
     
       &::-webkit-inner-spin-button {
         -webkit-appearance: none;
         appearance: none;
+      }
+
+      &:focus {
+        border-color: #0099ff;
       }
     }
 
