--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -1,3 +1,89 @@
+.vc-color-picker {
+  position: relative;
+  display: inline-block;
+
+  &__color {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    font-size: 14px;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
+
+    span {
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: 3px;
+      border: 1px solid rgba(0, 0, 0, .3);
+    }
+  }
+}
+
+.vc-color-picker__hsl {
+  &-panel {
+    position: relative;
+    width: 100%;
+    height: 125px;
+    background: 
+      linear-gradient(0deg,#000,transparent),
+      linear-gradient(90deg,#fff,hsla(0,0%,100%,0));
+    overflow: hidden;
+  }
+
+  &-cursor {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0;
+    height: 0;
+
+    i {
+      display: block;
+      width: 10px;
+      height: 10px;
+      border: 1px solid #fff;
+      border-radius: 100%;
+      background: transparent;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
+.vc-color-picker {
+  &__drop-down {
+    position: absolute;
+    z-index: 2000;
+    box-sizing: content-box;
+    background-color: #fff;
+    width: 230px;
+    border-radius: 4px;
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+  }
+
+  &__display-panel {
+    display: flex;
+    padding: 10px;
+
+    .color-box {
+      width: 32px;
+      height: 32px;
+      box-sizing: border-box;
+      border-radius: 20px;
+      overflow: hidden;
+      background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
+
+      span {
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        box-sizing: border-box;
+        border: 1px solid rgba(0,0,0,.1);
+      }
+    }
+  }
+}
+
 .color-picker__text-table {
   display: flex;
   width: 100%;
