--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -141,6 +141,7 @@
   &-bar {
     width: 100%;
     height: 100%;
+    cursor: pointer;
   }
 
   &-thumb {
@@ -153,6 +154,7 @@
     border-radius: 100%;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, .2);
     transform: translate(-50%, -50%);
+    pointer-events: none;
     cursor: pointer;
   }
 }
