--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -15,41 +15,15 @@
       height: 100%;
       border-radius: 3px;
       border: 1px solid rgba(0, 0, 0, .3);
+
+    }
+
+    &,
+    &.is-round span {
+      border-radius: 50%;
     }
   }
-}
 
-.vc-color-picker__hsl {
-  &-panel {
-    position: relative;
-    width: 100%;
-    height: 125px;
-    background: 
-      linear-gradient(0deg,#000,transparent),
-      linear-gradient(90deg,#fff,hsla(0,0%,100%,0));
-    overflow: hidden;
-  }
-
-  &-cursor {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 0;
-    height: 0;
-
-    i {
-      display: block;
-      width: 10px;
-      height: 10px;
-      border: 1px solid #fff;
-      border-radius: 100%;
-      background: transparent;
-      transform: translate(-50%, -50%);
-    }
-  }
-}
-
-.vc-color-picker {
   &__drop-down {
     position: absolute;
     z-index: 2000;
@@ -80,6 +54,36 @@
         box-sizing: border-box;
         border: 1px solid rgba(0,0,0,.1);
       }
+    }
+  }
+}
+
+.vc-color-picker__hsl {
+  &-panel {
+    position: relative;
+    width: 100%;
+    height: 125px;
+    background: 
+      linear-gradient(0deg,#000,transparent),
+      linear-gradient(90deg,#fff,hsla(0,0%,100%,0));
+    overflow: hidden;
+  }
+
+  &-cursor {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0;
+    height: 0;
+
+    i {
+      display: block;
+      width: 10px;
+      height: 10px;
+      border: 1px solid #fff;
+      border-radius: 100%;
+      background: transparent;
+      transform: translate(-50%, -50%);
     }
   }
 }
