--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -39,11 +39,13 @@
     padding: 10px;
 
     .color-box {
+      position: relative;
       width: 32px;
       height: 32px;
       box-sizing: border-box;
       border-radius: 20px;
       overflow: hidden;
+      cursor: pointer;
       background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
 
       span {
@@ -53,6 +55,21 @@
         border-radius: 20px;
         box-sizing: border-box;
         border: 1px solid rgba(0,0,0,.1);
+      }
+
+      i {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        color: #fff;
+        font-size: 16px;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        transition: opacity .3s;
+      }
+
+      &:hover i {
+        opacity: 1;
       }
     }
   }
