--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -3,6 +3,7 @@
   display: inline-block;
 
   &__color {
+    position: relative;
     display: inline-block;
     width: 1em;
     height: 1em;
@@ -15,7 +16,22 @@
       height: 100%;
       border-radius: 3px;
       border: 1px solid rgba(0, 0, 0, .3);
+      box-sizing: border-box;
+    }
 
+    &.is-empty {
+      background: #fff;
+
+      &::after {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 0px;
+        border-bottom: 1px solid rgba(0, 0, 0, .3);
+        transform: rotate(45deg);
+      }
     }
 
     &,
