--- a/example/src/components/VCMarkedIt/layout.less
+++ b/example/src/components/VCMarkedIt/layout.less
@@ -362,4 +362,8 @@
   pre[class~=language-bash]:before {
     content: "sh"
   }
+
+  pre[class~=language-diff]:before {
+    content: "diff"
+  }
 }
