调整选择器的focus事件

--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -28,12 +28,14 @@
         color: @color-text-placeholder;
       }
 
+      .is-focus &,
       .is-open & {
         border-color: #09f;
       }
 
       .is-disabled & {
         background-color: #f5f7fa;
+        cursor: not-allowed;
       }
     }
 
