--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,14 +1,14 @@
-/* 以下代码自动生成于 Fri Jul 31 2020 16:27:50 GMT+0800 (中国标准时间) */
+/* 以下代码自动生成于 Fri Jul 31 2020 16:44:26 GMT+0800 (GMT+08:00) */
 
 @import './styles/var.less';
 @import './styles/transition.less';
 @import './components/button/button.less';
+@import './components/buttonGroup/buttonGroup.less';
+@import './components/colorPicker/colorPicker.less';
 @import './components/formItem/formItem.less';
 @import './components/formItem/label.less';
-@import './components/buttonGroup/buttonGroup.less';
 @import './components/icon/icon.less';
-@import './components/colorPicker/colorPicker.less';
 @import './components/input/input.less';
-@import './components/select/select.less';
 @import './components/message/message.less';
 @import './components/notification/notification.less';
+@import './components/select/select.less';
