样式细节调整

--- a/example/src/components/VCMarkedIt/layout.less
+++ b/example/src/components/VCMarkedIt/layout.less
@@ -115,7 +115,8 @@
           font-size: 16px;
           text-align: left;
           vertical-align: bottom;
-          border-bottom: 2px solid var(--gray95);
+          border: 1px solid var(--gray95);
+          background-color: var(--gray95);
           transition: 
             background-color .4s ease-in-out,
             border-color .4s ease-in-out;
