--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -17,6 +17,7 @@
       border-radius: 3px;
       border: 1px solid rgba(0, 0, 0, .3);
       box-sizing: border-box;
+      cursor: pointer;
     }
 
     &.is-empty {
