--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,4 +1,4 @@
-/* 以下代码自动生成于 Fri Jul 31 2020 16:44:26 GMT+0800 (GMT+08:00) */
+/* 以下代码自动生成于 Sat Aug 01 2020 10:46:33 GMT+0800 (GMT+08:00) */
 
 @import './styles/var.less';
 @import './styles/transition.less';
@@ -9,6 +9,8 @@
 @import './components/formItem/label.less';
 @import './components/icon/icon.less';
 @import './components/input/input.less';
+@import './components/switch/switch.less';
 @import './components/message/message.less';
 @import './components/notification/notification.less';
 @import './components/select/select.less';
+@import './components/switch/switch.less';
