--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,13 +1,14 @@
-/* 以下代码自动生成于 Mon Aug 03 2020 16:19:04 GMT+0800 (中国标准时间) */
+/* 以下代码自动生成于 Wed Aug 05 2020 17:08:41 GMT+0800 (中国标准时间) */
 
 @import './styles/var.less';
 @import './styles/transition.less';
 @import './components/button/button.less';
 @import './components/buttonGroup/buttonGroup.less';
-@import './components/colorPicker/colorPicker.less';
-@import './components/icon/icon.less';
 @import './components/formItem/formItem.less';
 @import './components/formItem/label.less';
+@import './components/colorPicker/colorPicker.less';
+@import './components/icon/icon.less';
 @import './components/message/message.less';
-@import './components/select/select.less';
 @import './components/notification/notification.less';
+@import './components/select/select.less';
+@import './components/tabs/tabs.less';
