--- a/packages/components/tabs/tabs.less
+++ b/packages/components/tabs/tabs.less
@@ -64,6 +64,11 @@
       &.is-active {
         color: #09f;
       }
+      &.is-disabled {
+        pointer-events: none;
+        color: @color-text-secondary;
+        cursor: not-allowed;
+      }
     }
   }
 
