--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -1,5 +1,5 @@
 // font color
 @color-text-primary: #303133;
 @color-text-regular: #606266;
-@--color-text-secondary: #909399;
+@color-text-secondary: #909399;
 @color-text-placeholder: #C0C4CC;
