--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -18,6 +18,22 @@
 	-moz-osx-font-smoothing: grayscale
 }
 
+.vc-icon-os-apple:before {
+  content: "\e65a";
+}
+
+.vc-icon-os-windows:before {
+  content: "\e65e";
+}
+
+.vc-icon-os-linux:before {
+  content: "\e65f";
+}
+
+.vc-icon-os-linux-ubuntu:before {
+  content: "\e659";
+}
+
 .vc-icon-close-notification:before {
   content: "\e653";
 }
@@ -316,10 +332,6 @@
 
 .vc-icon-paperclip:before {
   content: "\e720";
-}
-
-.vc-icon-platform-eleme:before {
-  content: "\e721";
 }
 
 .vc-icon-s-claim:before {
@@ -736,10 +748,6 @@
 
 .vc-icon-film:before {
   content: "\e687";
-}
-
-.vc-icon-eleme:before {
-  content: "\e689";
 }
 
 .vc-icon-coffee:before {
