--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,16 +1,16 @@
-/* 以下代码自动生成于 Thu Aug 06 2020 13:53:07 GMT+0800 (GMT+08:00) */
+/* 以下代码自动生成于 Thu Aug 06 2020 16:50:00 GMT+0800 (中国标准时间) */
 
 @import './styles/var.less';
 @import './styles/transition.less';
 @import './components/button/button.less';
 @import './components/buttonGroup/buttonGroup.less';
 @import './components/colorPicker/colorPicker.less';
+@import './components/input/input.less';
+@import './components/icon/icon.less';
 @import './components/formItem/formItem.less';
 @import './components/formItem/label.less';
-@import './components/icon/icon.less';
-@import './components/input/input.less';
 @import './components/message/message.less';
 @import './components/notification/notification.less';
-@import './components/radio/radio.less';
 @import './components/select/select.less';
+@import './components/radio/radio.less';
 @import './components/switch/switch.less';
