--- a/packages/components/tabs/tabs.less
+++ b/packages/components/tabs/tabs.less
@@ -56,18 +56,34 @@
       font-size: 14px;
       line-height: 3em;
       height: 3em;
-      color: @color-text-primary;
+      color: @color-text-regular;
       user-select: none;
       cursor: pointer;
       transition: color .3s;
 
+      .vc-icon-close {
+        margin-left: 5px;
+        opacity: 0;
+        transition: opacity .35s;
+      }
+
       &.is-active {
         color: #09f;
+
+        .vc-icon-close {
+          opacity: .7;
+        }
       }
       &.is-disabled {
         pointer-events: none;
         color: @color-text-secondary;
         cursor: not-allowed;
+      }
+
+      &:hover {
+        .vc-icon-close {
+          opacity: .7;
+        }
       }
     }
   }
