--- a/example/src/components/VCMarkedIt/layout.less
+++ b/example/src/components/VCMarkedIt/layout.less
@@ -25,7 +25,10 @@
     @media (prefers-color-scheme: dark) {
       .DARK_headerColor
     }
+  }
 
+  strong {
+    font-weight: 600;
   }
 
   & > h1 {
