--- a/packages/components/tabs/tabs.less
+++ b/packages/components/tabs/tabs.less
@@ -47,6 +47,7 @@
   &__nav {
     float: left;
     position: relative;
+    // min-width: 100%;
     box-sizing: border-box;
     white-space: nowrap;
     transition: transform .35s, width .35s;
