--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,13 +1,13 @@
-/* 以下代码自动生成于 Thu Aug 06 2020 17:16:23 GMT+0800 (中国标准时间) */
+/* 以下代码自动生成于 Mon Aug 10 2020 09:13:54 GMT+0800 (GMT+08:00) */
 
 @import './styles/var.less';
 @import './styles/transition.less';
 @import './components/button/button.less';
 @import './components/buttonGroup/buttonGroup.less';
 @import './components/colorPicker/colorPicker.less';
-@import './components/icon/icon.less';
 @import './components/formItem/formItem.less';
 @import './components/formItem/label.less';
+@import './components/icon/icon.less';
 @import './components/input/input.less';
 @import './components/message/message.less';
 @import './components/notification/notification.less';
