--- a/packages/components/switch/switch.less
+++ b/packages/components/switch/switch.less
@@ -5,39 +5,80 @@
   font-size: 14px;
   vertical-align: middle;
   box-sizing: border-box;
+
+  &__inset {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    padding: 0 3px;
+    transition: opacity .35s;
+
+    i,
+    span {
+      display: inline-block;
+      font-size: 0.7em;
+      color: #fff;
+      white-space: nowrap;
+    }
+
+    &-open {
+      left: 0;
+      padding-right: calc(1em + 10px);
+
+      .is-checked & {
+        opacity: 1;
+      }
+    }
+    &-close {
+      opacity: 1;
+      right: 0;
+      padding-left: calc(1em + 10px);
+
+      .is-checked & {
+        opacity: 0;
+      }
+    }
+  }
 }
 
 .vc-switch__core {
   margin: 0;
   display: inline-block;
   position: relative;
-  width: 40px;
+  min-width: 50px;
   height: 20px;
-  border: 1px solid #dcdfe6;
   outline: none;
-  box-sizing: border-box;
-  background: #dcdfe6;
-  transition: border-color 0.3s, background-color 0.3s;
+  color: #dcdfe6;
+  background-color: currentColor;
+  border: 2px solid;
+  border-radius: 1em;
   vertical-align: middle;
   cursor: pointer;
+  transition: color .35s;
 
-  span {
-    color: #fff;
-    font-size: 0.7em;
-    position: absolute;
-    white-space: nowrap;
+  .is-checked & {
+    color: #0099ff;
   }
 
   &::after {
     content: "";
     position: absolute;
-    top: 1px;
-    left: 1px;
-    border-radius: 100%;
-    transition: all 0.3s;
+    top: 50%;
+    left: 0px;
     width: 1em;
     height: 1em;
+    border-radius: 100%;
+    transition: all 0.3s;
     background-color: #fff;
+    transform: translateY(-50%);
+
+    .is-checked & {
+      left: 100%;  
+      transform: translate(-100%, -50%);    
+    }
   }
 }
 .vc-switch__label.is-active {
@@ -71,10 +112,6 @@
   opacity: 0.5;
 }
 
-
-
-
-
 .vc-switch__label {
   transition: 0.2s;
   height: 20px;
@@ -92,15 +129,7 @@
   }
 }
 
-.is-checked {
-  .vc-switch__core {
-    &::after {
-      left: 100%;
-      margin-left: -1.1em;
-    }
-  }
-  
-}
+
 
 .vc-switch.is-disabled .vc-switch__core {
   cursor: not-allowed;
