--- a/packages/components/switch/switch.less
+++ b/packages/components/switch/switch.less
@@ -48,7 +48,7 @@
   margin: 0;
   display: inline-block;
   position: relative;
-  min-width: 50px;
+  min-width: 2.5em;
   height: 20px;
   outline: none;
   color: #dcdfe6;
