--- a/packages/components/switch/switch.less
+++ b/packages/components/switch/switch.less
@@ -46,14 +46,15 @@
   }
 
   &__label {
+    color: @color-text-primary;
     font-size: 14px;
     transition: color .35s;
 
     &-left {
-      margin-right: 10px;
+      margin-right: 8px;
     }
     &-right {
-      margin-left: 10px;
+      margin-left: 8px;
     }
 
     &.is-active {
