--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -1,6 +1,7 @@
 .vc-color-picker {
   position: relative;
   display: inline-block;
+  vertical-align: middle;
 
   &__color {
     position: relative;
