--- a/packages/components/input/input.less
+++ b/packages/components/input/input.less
@@ -1,5 +1,91 @@
 .vc-input {
-  font-size: 14px;
+  display: inline-block;
+  width: 100%;
+  vertical-align: middle;
+
+  &__text {
+    position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid #dcdfe6;
+    border-radius: 3px;
+    background: #fff;
+    transition: border .35s;
+    cursor: text;
+
+    &:hover {
+      border-color: #c0c4cc;
+    }
+    
+    &:focus-within,
+    &.is-focus {
+      border-color: #409eff;
+    }
+    &.is-disabled {
+      cursor: not-allowed;
+      background-color: #f5f7fa;
+    }
+
+    &--suffix-icon,
+    &--prefix-icon {
+      display: flex;
+      justify-content: center;
+      color: #c0c4cc;
+
+      &:empty {
+        display: none;
+      }
+    }
+    &--prefix-icon {
+      padding-left: 5px;
+    }
+    &--suffix-icon {
+      padding-right: 5px;
+    }
+
+    &--input {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 100%;
+      padding:.4em 5px;
+      border: 0;
+      outline: none;
+      cursor: inherit;
+      background: transparent;
+    
+      input::-webkit-input-placeholder,
+      textarea::-webkit-input-placeholder {
+        color: #d9d9d9;
+      }
+
+      &::-ms-reveal, 
+      &::-ms-clear {
+        display: none;
+      }
+    }
+
+    &--clearable {
+      opacity: 0;
+      padding-right: 4px;
+      color: #c0c4cc;
+      transition: opacity .35s;
+      cursor: pointer;
+
+      .vc-input__text:hover &,
+      .is-focus & {
+        opacity: 1;
+      }
+    }
+
+    &--show-passwd {
+      font-size: 16px;
+      padding-right: 4px;
+      color: #c0c4cc;
+      cursor: pointer;
+    }
+  }
+  
 }
 .vc_input__textarea {
   position: relative;
@@ -33,57 +119,11 @@
   }
 }
 
-.vc-input__text.focus {
-  border-color: #409eff;
-}
-
-.vc-input__text {
-  display: flex;
-  align-items: center;
-  border: 1px solid #dcdfe6;
-  border-radius: 4px;
-  width: 180px;
-  box-sizing: border-box;
-
-  &:hover {
-    // box-shadow: 0 0 2px 0 rgba(232, 237, 250, 0.6),
-    //   0 2px 2px 0 rgba(232, 237, 250, 0.5);
-    cursor: pointer;
-  }
-}
-.vc-input__input {
-  width: 100%;
-  height: 100%;
-  padding: 0.4em 0.5em 0.4em 0.5em;
-  cursor: pointer;
-  border: 0; // 去除未选中状态边框
-  outline: none; // 去除选中状态边框
-  background-color: rgba(0, 0, 0, 0); // 透明背景
-  -webkit-appearance: none;
-
-  input::-webkit-input-placeholder,
-  textarea::-webkit-input-placeholder {
-    color: #d9d9d9;
-  }
-}
-
 .int-icon-right {
   margin-right: 5px;
 }
 .vc-input__inner.focus-textarea {
   border-color: #409eff;
-}
-
-.vc-input__prefix-icon {
-  height: 100%;
-  padding-left: 6px;
-  text-align: center;
-  transition: all 0.3s;
-  color: #c0c4cc;
-
-  i {
-    line-height: 100%;
-  }
 }
 
 .vc-input__numLength {
@@ -96,28 +136,9 @@
   }
 }
 
-.vc-input__suffix-icon {
-  padding-right: 4px;
-  color: #c0c4cc;
-}
-
-.vc-input__clearable {
-  padding-right: 4px;
-  color: #c0c4cc;
-    
-}
-
-.vc-input__showPassword {
-  padding-right: 4px;
-  color: #c0c4cc;
-}
-
 .vc-input__input.disabled-input {
   color: #c0c4cc;
   border-color: #e4e7ed;
   cursor: not-allowed !important;
 }
 
-.vc-input__text.disabled {
-  background-color: #f5f7fa;
-}
