--- a/packages/components/input/input.less
+++ b/packages/components/input/input.less
@@ -1,144 +1,115 @@
 .vc-input {
-  display: inline-block;
-  width: 100%;
+  position: relative;
+  display: flex;
   vertical-align: middle;
+  align-items: center;
+  box-sizing: border-box;
+  border: 1px solid #dcdfe6;
+  border-radius: 3px;
+  background: #fff;
+  transition: border .35s;
+  cursor: text;
+
+  &:hover {
+    border-color: #c0c4cc;
+  }
+  &:focus-within,
+  &.is-focus {
+    border-color: #409eff;
+  }
+  &.is-disabled {
+    cursor: not-allowed;
+    background-color: #f5f7fa;
+  }
+
+  &__suffix-icon,
+  &__prefix-icon {
+    display: flex;
+    justify-content: center;
+    color: #c0c4cc;
+
+    &:empty {
+      display: none;
+    }
+  }
+  &__prefix-icon {
+    padding-left: 5px;
+  }
+  &__suffix-icon {
+    padding-right: 5px;
+  }
 
   &__text {
-    position: relative;
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    border: 1px solid #dcdfe6;
-    border-radius: 3px;
-    background: #fff;
-    transition: border .35s;
-    cursor: text;
-
-    &:hover {
-      border-color: #c0c4cc;
-    }
-    
-    &:focus-within,
-    &.is-focus {
-      border-color: #409eff;
-    }
-    &.is-disabled {
-      cursor: not-allowed;
-      background-color: #f5f7fa;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 100%;
+    padding:.4em 5px;
+    border: 0;
+    outline: none;
+    cursor: inherit;
+    background: transparent;
+  
+    input::-webkit-input-placeholder,
+    textarea::-webkit-input-placeholder {
+      color: #d9d9d9;
     }
 
-    &--suffix-icon,
-    &--prefix-icon {
-      display: flex;
-      justify-content: center;
-      color: #c0c4cc;
-
-      &:empty {
-        display: none;
-      }
-    }
-    &--prefix-icon {
-      padding-left: 5px;
-    }
-    &--suffix-icon {
-      padding-right: 5px;
+    &::-ms-reveal, 
+    &::-ms-clear {
+      display: none;
     }
 
-    &--input {
-      -webkit-appearance: none;
-      width: 100%;
-      height: 100%;
-      padding:.4em 5px;
-      border: 0;
-      outline: none;
-      cursor: inherit;
-      background: transparent;
-    
-      input::-webkit-input-placeholder,
-      textarea::-webkit-input-placeholder {
-        color: #d9d9d9;
-      }
+  }
+  &__show-passwd {
+    font-size: 16px;
+    padding-right: 4px;
+    color: #c0c4cc;
+    cursor: pointer;
+  }
 
-      &::-ms-reveal, 
-      &::-ms-clear {
-        display: none;
-      }
-    }
+  &__clearable {
+    opacity: 0;
+    padding-right: 4px;
+    color: #c0c4cc;
+    transition: opacity .35s;
+    cursor: pointer;
 
-    &--clearable {
-      opacity: 0;
-      padding-right: 4px;
-      color: #c0c4cc;
-      transition: opacity .35s;
-      cursor: pointer;
-
-      .vc-input__text:hover &,
-      .is-focus & {
-        opacity: 1;
-      }
-    }
-
-    &--show-passwd {
-      font-size: 16px;
-      padding-right: 4px;
-      color: #c0c4cc;
-      cursor: pointer;
+    .vc-input:hover &,
+    .is-focus & {
+      opacity: 1;
     }
   }
   
-}
-.vc_input__textarea {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  vertical-align: bottom;
-  font-size: 14px;
-  max-width: 414px;
-}
-
-.vc-input__inner {
-  display: block;
-  resize: vertical;
-  padding: 5px 10px;
-  line-height: 1.5;
-  box-sizing: border-box;
-  width: 100%;
-  font-size: inherit;
-  color: #606266;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #dcdfe6;
-  border-radius: 4px;
-  outline: none;
-  transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-
-  &:hover {
-    box-shadow: 0 0 8px 0 rgba(232, 237, 250, 0.6),
-      0 2px 4px 0 rgba(232, 237, 250, 0.5);
-    cursor: pointer;
+  &__textarea {
+    display: block;
+    padding: 5px;
+    line-height: 1.5;
+    width: 100%;
+    border: none;
+    outline: none;
+    resize: vertical;
+    background: #fff;
+    font-family: inherit;
+    
+    &:hover {
+      cursor: inherit;
+    }
   }
-}
 
-.int-icon-right {
-  margin-right: 5px;
-}
-.vc-input__inner.focus-textarea {
-  border-color: #409eff;
-}
+  &__num-length {
+    padding-right: 6px;
+  
+    span {
+      color: #909399;
+      font-size: 12px;
+      font-style: normal;
+    }
 
-.vc-input__numLength {
-  padding-right: 6px;
-
-  span {
-    color: #909399;
-    font-size: 12px;
-    font-style: normal;
+    .is-textarea & {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
   }
-}
-
-.vc-input__input.disabled-input {
-  color: #c0c4cc;
-  border-color: #e4e7ed;
-  cursor: not-allowed !important;
 }
 
