--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -1,7 +1,7 @@
 .vc-select {
   position: relative;
   display: inline-block;
-  width: 200px;
+  min-width: 200px;
 
   &__input {
     position: relative;
