--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -6,6 +6,7 @@
   &__color {
     position: relative;
     display: inline-block;
+    vertical-align: middle;
     width: 1em;
     height: 1em;
     font-size: 14px;
