--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -66,7 +66,7 @@
       overflow: hidden;
       cursor: pointer;
       background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
-
+      
       span {
         display: block;
         width: 100%;
@@ -75,7 +75,7 @@
         box-sizing: border-box;
         border: 1px solid rgba(0,0,0,.1);
       }
-
+      
       i {
         position: absolute;
         top: 50%;
@@ -84,6 +84,7 @@
         font-size: 16px;
         transform: translate(-50%, -50%);
         opacity: 0;
+        text-shadow: 1px 1px 10px black;
         transition: opacity .3s;
       }
 
