--- a/packages/components/button/button.less
+++ b/packages/components/button/button.less
@@ -137,6 +137,12 @@
   &.animate {
     animation: ripple-ani .3s ease-out;
   }
+
+  &.is-icon.round {
+    padding: 0;
+    width: 2em;
+    height: 2em;
+  }
 }
 
 @keyframes ripple-ani {
