--- a/packages/components/confirm/confirm.less
+++ b/packages/components/confirm/confirm.less
@@ -9,13 +9,13 @@
 
   &-box {
     width: 400px;
-    margin: 100px auto;
+    margin: 200px auto;
     background: #fff;
     border-radius: 3px;
 
     &__header {
       display: flex;
-      padding: 0 10px;
+      padding: 10px;
       align-items: center;
       font-size: 16px;
       line-height: 2;
@@ -40,6 +40,16 @@
       padding: 0 10px;
       font-size: 14px;
       color: @color-text-regular;
+    }
+
+    &__footer {
+      padding: 10px;
+      text-align: right;
+      font-size: 14px;
+
+      .vc-button + .vc-button {
+        margin-left: 10px;
+      }
     }
   }
 }
