--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,15 +1,16 @@
-/* 以下代码自动生成于 Mon Sep 07 2020 13:41:59 GMT+0800 (中国标准时间) */
+/* 以下代码自动生成于 Mon Sep 07 2020 15:11:32 GMT+0800 (中国标准时间) */
 
 @import './styles/var.less';
 @import './styles/transition.less';
 @import './components/button/button.less';
 @import './components/buttonGroup/buttonGroup.less';
 @import './components/collapseItem/collapseItem.less';
+@import './components/collapse/collapse.less';
 @import './components/colorPicker/colorPicker.less';
 @import './components/formItem/formItem.less';
 @import './components/icon/icon.less';
-@import './components/input/input.less';
 @import './components/layer/layer.less';
+@import './components/input/input.less';
 @import './components/message/message.less';
 @import './components/notification/notification.less';
 @import './components/radio/radio.less';
