--- a/packages/layout.less
+++ b/packages/layout.less
@@ -1,20 +1,21 @@
-/* 以下代码自动生成于 Tue Sep 08 2020 10:53:30 GMT+0800 (中国标准时间) */
+/* 以下代码自动生成于 Tue Sep 08 2020 16:40:01 GMT+0800 (中国标准时间) */
 
 @import './styles/var.less';
 @import './styles/transition.less';
 @import './components/button/button.less';
+@import './components/buttonGroup/buttonGroup.less';
 @import './components/collapse/collapse.less';
 @import './components/collapseItem/collapseItem.less';
+@import './components/colorPicker/colorPicker.less';
 @import './components/formItem/formItem.less';
 @import './components/icon/icon.less';
+@import './components/layer/layer.less';
 @import './components/input/input.less';
 @import './components/message/message.less';
-@import './components/buttonGroup/buttonGroup.less';
-@import './components/colorPicker/colorPicker.less';
-@import './components/layer/layer.less';
+@import './components/notification/notification.less';
 @import './components/pagination/pagination.less';
 @import './components/radio/radio.less';
 @import './components/select/select.less';
 @import './components/switch/switch.less';
+@import './components/table/table.less';
 @import './components/tabs/tabs.less';
-@import './components/notification/notification.less';
