--- a/packages/components/table/table.less
+++ b/packages/components/table/table.less
@@ -1,4 +1,6 @@
-.vc-table-com {
+.vc-table {
+  position: relative;
+
   table {
     width: 100%;
   }
@@ -32,6 +34,30 @@
     .empty td {
       line-height: 100px;
       text-align: center;
+    }
+  }
+
+  &__loading-mod {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: @color-text-regular;
+    background: rgba(255, 255, 255, .5);
+
+    .inner {
+      text-align: center;
+      p {
+        color: @color-text-regular;
+      }
+    }
+
+    i {
+      font-size: 14px;
     }
   }
 }
