细节调整调整

--- a/packages/components/select/select.less
+++ b/packages/components/select/select.less
@@ -95,7 +95,7 @@
   color: @color-text-regular;
   transition: color .3s, font-weight .3s;
 
-  &.hover {
+  &:hover {
     background-color: #f5f7fa;
   }
 
