--- a/packages/components/pagination/pagination.less
+++ b/packages/components/pagination/pagination.less
@@ -1,12 +1,12 @@
 .vc-pagination {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   margin: 0;
   padding: 0;
   color: #09f;
 
   .btn {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 1em;
