优化文字效果

--- a/packages/components/button/button.less
+++ b/packages/components/button/button.less
@@ -119,6 +119,7 @@
 
   &[type=text] {
     padding: 0 .2em;
+    border-radius: 1em;
     background-color: transparent;
     border-color: transparent;
 
