feat: 添加单页隐藏功能

--- a/packages/components/pagination/pagination.less
+++ b/packages/components/pagination/pagination.less
@@ -5,6 +5,10 @@
   padding: 0;
   color: #09f;
 
+  &.is-hide {
+    display: none;
+  }
+
   .btn {
     display: inline-flex;
     justify-content: center;
