feat:添加边框功能与文档优化

--- a/packages/components/table/table.less
+++ b/packages/components/table/table.less
@@ -37,6 +37,12 @@
     }
   }
 
+  .has-border {
+    td, th {
+      border: 1px solid #eee;
+    }
+  }
+
   &__pagination {
     text-align: right;
   }
