--- a/packages/components/formItem/formItem.less
+++ b/packages/components/formItem/formItem.less
@@ -23,6 +23,7 @@
   }
 
   &__label {
+    display: inline-block;
     padding: 0 5px 0 0;
     color: @color-text-regular;
     vertical-align: top;
