--- a/packages/styles/transition.less
+++ b/packages/styles/transition.less
@@ -1,3 +1,14 @@
+// 淡入淡出效果
+.vc-fade-enter-active,
+.vc-fade-leave-active {
+  opacity: 1;
+  transition: opacity 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  transform-origin: center top;
+}
+.vc-fade-enter-from,
+.vc-fade-leave-active {
+  opacity: 0;
+}
 
 .vc-zoom-in-top-enter-active,
 .vc-zoom-in-top-leave-active {
