feat:添加文字图标

--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -18,6 +18,10 @@
 	-moz-osx-font-smoothing: grayscale
 }
 
+.vc-icon-text:before {
+  content: "\e79d";
+}
+
 .vc-icon-os-apple:before {
   content: "\e65a";
 }
