perf:优化按钮效果

--- a/packages/components/button/button.less
+++ b/packages/components/button/button.less
@@ -137,6 +137,7 @@
 
   &.animate {
     animation: ripple-ani .3s ease-out;
+    will-change: box-shadow;
   }
 
   &.is-icon.round {
@@ -151,6 +152,6 @@
     box-shadow: 0 0 0px 0px currentColor;
   }
   100% {
-    box-shadow: 0 0 3px 3px transparent;
+    box-shadow: 0 0 5px 3px transparent;
   }
 }
