--- a/packages/components/buttonGroup/buttonGroup.less
+++ b/packages/components/buttonGroup/buttonGroup.less
@@ -6,6 +6,10 @@
     margin: 0;
     z-index: 0;
 
+    &:not(.default) {
+      border-width: 0 1px;
+    }
+
     &:hover {
       z-index: 1;
     }
