feat:添加时间验证错误时效果

--- a/packages/components/formItem/formItem.less
+++ b/packages/components/formItem/formItem.less
@@ -50,6 +50,21 @@
       padding: 0 2px;
     }
   }
+
+  &.is-error {
+
+    // 时间选择器
+    .vc-time-picker {
+      .vc-time-picker__header {
+        input {
+          border-color: #ff4d4f; 
+        }
+        .vc-icon-time {
+          color: #ff4d4f;
+        }
+      }
+    }
+  }
 }
 
 .vc-fade-in-enter-active,
