perf:优化按钮文字，防止过渡换行

--- a/packages/components/button/button.less
+++ b/packages/components/button/button.less
@@ -67,6 +67,7 @@
   padding: .25em .8em .3em;
   font-size: 14px;
   color: #666;
+  word-break: keep-all;
   border-radius: .15em;
   border: 1px solid #ddd;
   background: #fff;
