styles:增加为空时，边框支持

--- a/packages/components/table/table.less
+++ b/packages/components/table/table.less
@@ -68,6 +68,11 @@
   &__body {
     overflow: auto;
     border-bottom: 1px solid #eee;
+
+    &.is-border {
+      border: 1px solid #eee;
+      border-top: 0;
+    }
   }
   &__empty {
     display: grid;
