--- a/packages/components/notification/notification.less
+++ b/packages/components/notification/notification.less
@@ -8,7 +8,7 @@
   margin: 5px;
   padding: 5px;
   width: 300px;
-  border-radius: 3px;
+  border-radius: 10px;
   backdrop-filter: saturate(180%) blur(20px);
   background-color: rgba(255,255,255,0.72);
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, .3);
@@ -20,7 +20,6 @@
 }
 .vc-notify__title {
   display: flex;
-  // margin-bottom: 5px;
   font-size: 16px;
   color: #333;
 
@@ -48,9 +47,7 @@
 }
 .vc-notify__icon {
   display: flex;
-  // margin-left: 5px;
-  justify-content: center;
-  align-items: center;
+  place-items: center;
 
   i {
     width: 40px;
